# AdventOfCode_Template

./: CMakeLists.txt
_template/: CMakeLists.txt  data.h  solution.cpp
common/: aoc.h  indexedcontainerwrapper.h  mathutils.h  range.h  types.h  vector2.h
